# NeXTLinux-_-govulners-db

./: .bouncer.yaml  .gitattributes  .gitignore  .golangci.yaml  .goreleaser.yaml  Makefile  README.md  bump-schema.py  go.mod  go.sum  govulners-schema-version-mapping.json  install.sh  pyproject.toml
.github/actions/bootstrap/: action.yaml
.github/scripts/: ci-check.sh
.github/workflows/: validations.yaml
cmd/govulners-db/: main.go
cmd/govulners-db/application/: application.go  build_info.go  config.go  logging.go
cmd/govulners-db/cli/: cli.go
internal/: constants.go
internal/bus/: bus.go
internal/eventloop/: eventloop.go  eventloop_test.go
internal/file/: getter.go
internal/log/: log.go
internal/ui/: select.go
internal/ui/loggerui/: ui.go
pkg/: lib.go
pkg/data/: entry.go  transformers.go
pkg/event/: event.go
pkg/process/: build.go  default_schema_version.go  package.go  pull.go
pkg/process/processors/: github_processor.go  github_processor_test.go  match_exclusion_processor.go  match_exclusion_processor_test.go  msrc_processor.go  msrc_processor_test.go  nvd_processor.go  nvd_processor_test.go  os_processor.go  os_processor_test.go
pkg/process/v1/: processors.go  writer.go  writer_test.go
pkg/process/v2/: processors.go  writer.go  writer_test.go
pkg/process/v3/: processors.go  writer.go  writer_test.go
pkg/process/v4/: processors.go  writer.go  writer_test.go
pkg/process/v5/: processors.go  writer.go  writer_test.go
pkg/provider/: config.go  file.go  state.go
publish/: .grype-db.yaml  pyproject.toml
(+82 files in other folders)
